--- a/cvbr.html
+++ b/cvbr.html
@@ -36,10 +36,10 @@
               <div id="demo" class="collapse in">
                 <ul class="nav nav-pills nav-stacked nav-sincronizada">
                   <li class="active"><a data-toggle="pill" href="#cvbr" class="barraIcones guia"><i class="fa fa-file-code-o icones"></i>Readme.md</a></li>
-                  <li><a data-toggle="pill" href="#education" class="barraIcones guia"><i class="fa fa-file-code-o icones"></i>Education.css</a></li>
-                  <li><a data-toggle="pill" href="#work-1" class="barraIcones guia"><i class="fa fa-file-code-o icones"></i>Work-1.js</a></li>
-                  <li><a data-toggle="pill" href="#work-2" class="barraIcones guia"><i class="fa fa-file-code-o icones"></i>Work-2.js</a></li>
-                  <li><a data-toggle="pill" href="#work-3" class="barraIcones guia"><i class="fa fa-file-code-o icones"></i>Work-3.js</a></li>
+                  <li><a data-toggle="pill" href="#education" class="barraIcones guia"><i class="fa fa-file-code-o icones"></i>Education.js</a></li>
+                  <li><a data-toggle="pill" href="#work-1" class="barraIcones guia"><i class="fa fa-file-code-o icones"></i>Work-1.css</a></li>
+                  <li><a data-toggle="pill" href="#work-2" class="barraIcones guia"><i class="fa fa-file-code-o icones"></i>Work-2.css</a></li>
+                  <li><a data-toggle="pill" href="#work-3" class="barraIcones guia"><i class="fa fa-file-code-o icones"></i>Work-3.css</a></li>
                   <li><a data-toggle="pill" href="#contact" class="barraIcones guia"><i class="fa fa-file-code-o icones"></i>Contact.php</a></li>
                 </ul>
               </div>
@@ -52,10 +52,10 @@
                 <div id="exTab3">
                     <ul class="nav nav-pills nav-sincronizada">
                         <li class="active"><a  href="#cvbr" data-toggle="tab" class="guia">Readme.md</a></li>
-                        <li><a href="#education" data-toggle="tab" class="guia">Education.css</a></li>
-                        <li><a href="#work-1" data-toggle="tab" class="guia">Work-1.js</a></li>
-                        <li><a href="#work-2" data-toggle="tab" class="guia">Work-2.js</a></li>
-                        <li><a href="#work-3" data-toggle="tab" class="guia">Work-3.js</a></li>
+                        <li><a href="#education" data-toggle="tab" class="guia">Education.js</a></li>
+                        <li><a href="#work-1" data-toggle="tab" class="guia">Work-1.css</a></li>
+                        <li><a href="#work-2" data-toggle="tab" class="guia">Work-2.css</a></li>
+                        <li><a href="#work-3" data-toggle="tab" class="guia">Work-3.css</a></li>
                         <li><a href="#contact" data-toggle="tab" class="guia">Contact.php</a></li>
                     </ul>
 
