--- a/index.html
+++ b/index.html
@@ -5,14 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>curriculum vitae</title>
+    <link rel="stylesheet" href="css/index-style.css">
 </head>
 <body>
-    <a href="cvbr.html">
-        <img src="img/brazil-metal.png" alt="pt-br">
-    </a>
-    <a href="cvca.html">
-        <img src="img/canada-metal.png" alt="en">
-    </a>
-    
+    <div class="lang-box">
+        <p>Choose The Language:</p>
+        <a href="cvbr.html">
+            <img src="img/brazil-metal.png" alt="pt-br">
+        </a>
+        <a href="cvca.html">
+            <img src="img/canada-metal.png" alt="en">
+        </a>
+    </div>
 </body>
 </html>
