--- a/cvbr.html
+++ b/cvbr.html
@@ -86,7 +86,7 @@
                           </div>
                           <div class="col-xs-6">
 
-                              <img src="img/perfil2.jpg" class="imagem"><br>
+                              <img src="img/perfil-brazil.JPG" class="imagem"><br>
                               <h1 id="nome" class="text-center" style="font-family: monospace">Guilherme Gianjope</h1>
 
                               <h2 class="subtitulo text-left">Informações Básicas</h2>
