--- a/cvbr.html
+++ b/cvbr.html
@@ -74,14 +74,13 @@
                               desenvolvimento de soluções Web. Além de experiência como Instrutor de Cursos Técnicos.<br><br>
 
                               - Habilidade em HTML5, CSS3, SASS, JavaScript, Bootstrap, PHP e SQL Server.<br>
-                              - Também conheço controle de versões (git), assim como a plataforma de hospedagem GitHub<br>
+                              - Controle de versões (git), assim como a plataforma de hospedagem GitHub<br>
                               - Facilidade e práticas em trabalhos de equipe.<br>
-                              - Criativo e Versátil.<br>
+                              - Criativo.<br>
+                              - Versátil.<br>
                               - Liderança e gerenciamento de risco sob pressão.<br>
-                              - Forte Ética Profissional.br>
-                              - Inglês avançado e Espanhol intermediário<br><br>
-
-                              Disponível para viagens.
+                              - Forte Ética Profissional.<br>
+                              - Dedicado<br><br>
                             </p>
                           </div>
                           <div class="col-xs-6">
