--- a/cvca.html
+++ b/cvca.html
@@ -66,22 +66,19 @@
                           <div class="col-xs-6" style="border-right: 1px solid #252525;">
                             <p class="codigo">
 
-                            <h2 class="subtitulo text-left">Resumo de Habilidades</h2>
+                            <h2 class="subtitulo text-left">Summary of Qualifications</h2>
 
                             <p class="codigo">
-                              Profissional com ampla experiência profissional em Tecnologia de Informação. Possui expertise e
-                              conhecimento no suporte de infraestrutura, adminstração de redes, implantação e gerenciamento de sistemas, bem como no
-                              desenvolvimento de soluções Web. Além de experiência como Instrutor de Cursos Técnicos.<br><br>
+                              I'm a professional with expertise in many IT areas. Work experience in infrastructure support, network administration, in the implementation and management of systems, as well as in the development of Web solutions, and as a Teacher of Technical Courses.<br><br>
 
-                              - Habilidade em HTML5, CSS3, SASS, JavaScript, Bootstrap, PHP e SQL Server.<br>
-                              - Também conheço controle de versões (git), assim como a plataforma de hospedagem GitHub<br>
-                              - Facilidade e práticas em trabalhos de equipe.<br>
-                              - Criativo e Versátil.<br>
-                              - Liderança e gerenciamento de risco sob pressão.<br>
-                              - Forte Ética Profissional.br>
-                              - Inglês avançado e Espanhol intermediário<br><br>
-
-                              Disponível para viagens.
+                              - Skills with HTML5, CSS3, SASS, JavaScript, Bootstrap, PHP and SQL Server.<br>
+                              - Version Control (git), as well as the GitHub hosting platform.<br>
+                              - Ease and practices in teamwork.<br>
+                              - Creative.<br>
+                              - Adaptability.<br>
+                              - Leadership and risk management under pressure.<br>
+                              - Strong work ethic.<br>
+                              - Hardworker<br><br>
                             </p>
                           </div>
                           <div class="col-xs-6">
