--- a/cvbr.html
+++ b/cvbr.html
@@ -88,11 +88,12 @@
                               <img src="img/perfil-brazil.JPG" class="imagem"><br>
                               <h1 id="nome" class="text-center" style="font-family: monospace">Guilherme Gianjope</h1>
 
-                              <h2 class="subtitulo text-left">Informações Básicas</h2>
+                              <h2 class="subtitulo text-left">Informações</h2>
                               <p class="codigo">
-                                Profissional criativo e apaixonado por
-                                tecnologia, com mais de 9 anos de experiência, provendo soluções em TI. Posso não ter os conhecimentos que vocês procuram,
-                                mas nada me impede de aprender.
+                                Profissional criativo e apaixonado por TI, com um constante desejo de aprender novas tecnologias. 
+                                Mais de 9 anos de experiência provendo soluções em TI. 
+                                Posso não ter todos os conhecimentos que vocês procuram,
+                                mas nada me impede de aprender.                                
                               </p>
 
                               <h2 class="subtitulo text-left">Objetivo</h2>
