--- a/cvca.html
+++ b/cvca.html
@@ -69,7 +69,8 @@
                             <h2 class="subtitulo text-left">Summary of Qualifications</h2>
 
                             <p class="codigo">
-                              I'm a professional with expertise in many IT areas. Work experience in infrastructure support, network administration, in the implementation and management of systems, as well as in the development of Web solutions, and as a Teacher of Technical Courses.<br><br>
+                              I'm a professional with expertise in many IT areas. Work experience in infrastructure support, network administration, 
+                              in the implementation and management of systems, as well as in the development of Web solutions, and as a Teacher of Technical Courses.<br><br>
 
                               - Skills with HTML5, CSS3, SASS, JavaScript, Bootstrap, PHP and SQL Server.<br>
                               - Version Control (git), as well as the GitHub hosting platform.<br>
@@ -86,16 +87,17 @@
                               <img src="img/perfil-canada.jpg" class="imagem"><br>
                               <h1 id="nome" class="text-center" style="font-family: monospace">Guilherme Gianjope</h1>
 
-                              <h2 class="subtitulo text-left">Informações Básicas</h2>
+                              <h2 class="subtitulo text-left">About me</h2>
                               <p class="codigo">
-                                Profissional criativo e apaixonado por
-                                tecnologia, com mais de 9 anos de experiência, provendo soluções em TI. Posso não ter os conhecimentos que vocês procuram,
-                                mas nada me impede de aprender.
+                                I'm a creative professional and passionate for IT, with a constant desire to learn new technologies. 
+                                Offering 9+ years of experience providing diverse IT solutions. 
+                                I may not have all the knowledge you are looking for,
+                                but nothing stops me from learning.
                               </p>
 
-                              <h2 class="subtitulo text-left">Objetivo</h2>
+                              <h2 class="subtitulo text-left">Objective</h2>
                               <p class="codigo">
-                                Desenvolvimento de soluções Web
+                                Development
                               </p>
 
                           </div>
