--- a/index.html
+++ b/index.html
@@ -8,14 +8,18 @@
     <link rel="stylesheet" href="css/index-style.css">
 </head>
 <body>
-    <div class="lang-box">
-        <p>Choose The Language:</p>
-        <a href="cvbr.html">
-            <img src="img/brazil-metal.png" alt="pt-br">
-        </a>
-        <a href="cvca.html">
-            <img src="img/canada-metal.png" alt="en">
-        </a>
-    </div>
+    <div class="container">
+        <h1>Choose the Language:</h1>
+		<div id="carousel">
+			<figure><a href="cvbr.html"><img src="img/brazil-metal.png" alt=""></a></figure>
+			<figure><a href="cvca.html"><img src="img/canada-metal.png" alt=""></a></figure>
+			<figure><a href="cvbr.html"><img src="img/brazil-metal.png" alt=""></a></figure>
+			<figure><a href="cvca.html"><img src="img/canada-metal.png" alt=""></a></figure>
+			<figure><a href="cvbr.html"><img src="img/brazil-metal.png" alt=""></a></figure>
+			<figure><a href="cvca.html"><img src="img/canada-metal.png" alt=""></a></figure>
+			<figure><a href="cvbr.html"><img src="img/brazil-metal.png" alt=""></a></figure>
+			<figure><a href="cvca.html"><img src="img/canada-metal.png" alt=""></a></figure>
+		</div>
+	</div>
 </body>
 </html>
