--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Choose the Language:</h1>
+        <h1>Choose the Language</h1>
 		<div id="carousel">
 			<figure><a href="cvbr.html"><img src="img/brazil-metal.png" alt=""></a></figure>
 			<figure><a href="cvca.html"><img src="img/canada-metal.png" alt=""></a></figure>
